--- a/admin.html
+++ b/admin.html
@@ -33,9 +33,8 @@
         <div id="modal_options">
             <!--BOTÕES DE MODAIS-->
 
-            <a href="#cadastrar_operador">
+         <!--   <a href="#cadastrar_operador">
                 <div class="modal_button" id="modal_cadastrar_operador">
-                    <!--MODAL CADASTRAR OPERADOR-->
                     <table>
                         <tr>
                             <td>
@@ -48,11 +47,26 @@
                         </tr>
                     </table>
                 </div>
+            </a> -->
+
+            <a href="#consultar_operador">
+                <div class="modal_button" id="modal_consultar_operador">
+                    <table>
+                        <tr>
+                            <td>
+                                <img src="/.media/consultar-operador.png" style="height: 11vh" />
+                            </td>
+                            <td>
+                                <font style="font-family: Montserrat,sans-serif; font-size:4vh; font-weight: 900;">
+                                    CONSULTAR<br>OPERADOR</font>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
             </a>
 
-            <a href="#remover_operador">
+        <!--    <a href="#remover_operador">
                 <div class="modal_button" id="modal_remover_operador">
-                    <!--MODAL REMOVER OPERADOR-->
                     <table>
                         <tr>
                             <td>
@@ -65,7 +79,7 @@
                         </tr>
                     </table>
                 </div>
-            </a>
+            </a> -->
 
             <a href="#atualizar_estoque">
                 <div class="modal_button" id="modal_atualizar_estoque">
@@ -135,6 +149,82 @@
 
                     <p class="input_label">Senha:</p>
                     <input type="password" placeholder="" id="matricula" class="cpf_input" required />
+
+                    <span class="modal_screen_options">
+                        <!--BOTÕES CANCELAR/CONCLUIR-->
+                        <input type="reset" value="Cancelar" class="bt_cancelar" onclick="location.href='#'">
+                        <input type="submit" value="Concluir" class="bt_concluir">
+                    </span>
+
+
+                </form>
+
+            </div>
+        </div>
+
+        <div id="consultar_operador" class="modal">
+            <div class="modal_conteudo">
+
+                <h1 class="modal_header" align="center">CONSULTAR OPERADOR</h1>
+
+                <form>
+
+                        <div id="identificador">
+                            <p class="input_label" style="margin-top: 6vh;">Identificador:</p>
+                            <input type="search" id="nome" class="identificador_input" required />
+                            <button id="search_bt"><img src="/.media/lupa.png" style="width: 1.5vw;" /></button>
+                        </div>
+
+                        <div id="id_type">
+                            <input type="radio" name="id_option" value="matricula" checked>
+                            <label for="matricula" class="id_label">Matrícula</label>
+                            <input type="radio" name="id_option" value="nome">
+                            <label for="nome" class="id_label">Nome</label>
+                            <input type="radio" name="id_option" value="cpf">
+                            <label for="cpf" class="id_label">CPF</label>
+                        </div>
+                
+                </form>
+
+                <div id="user_list">
+                    <table id="user_table" border="1">
+                        <tr>
+                            <th>
+                                Matrícula
+                            </th>
+                            <th>
+                                Nome
+                            </th>
+                            <th>
+                                CPF
+                            </th>
+                            <th>
+                                Gênero
+                            </th>
+                            <th>
+                                Data de Nascimento
+                            </th>
+                        </tr>
+
+                        <tr>
+                            <td>
+                                20221610133
+                            </td>
+                            <td>
+                                Afrânio da Cunha Nascimento
+                            </td>
+                            <td>
+                                182.744.923-83
+                            </td>
+                            <td>
+                                Masculino
+                            </td>
+                            <td>
+                                21/06/1973
+                            </td>
+                        </tr>
+                    </table>
+                </div>
 
                     <span class="modal_screen_options">
                         <!--BOTÕES CANCELAR/CONCLUIR-->
